<resources>
    <string name="app_name">CarRent</string>
    <string name="signup">Dont have an account? <u>Register here!!</u></string>
    <string-array name="sort">
        <item>Price</item>
        <item>Location</item>
        <item>Rating</item>
    </string-array>
    <string name="bookingToolbar">Booking History</string>
    <string name="currentlyBooked">Currently Booked Vehicles</string>
    <string name="previouslyBooked">Previously Booked Vehicles</string>
    <string name="carDescription">Vehicle Description</string>
    <string name="contact_owner">Contact Owner</string>
    <string name="location">Location</string>
    <string name="book_now">Book Now</string>
    <string name="car_results">Vehicle Results</string>
    <string name="help">Help</string>
    <string name="help1">Follow the steps below to Rent the Vehicle: \n 1. Download and install the app. \n 2. Login/Register yourself. \n 3. Search for the "Vehicle type\" and "City" from the given options. \n 4. Select "To" and "From" Date and tap on "Search".\n 5. The app will display a list of vehicles as per your selected options. \n 6. You can sort the result based on price, rating and location. \n 7. Tap on the "Book Now" to rent the vehicle. \n 8. You can see the description of the vehicle and the owner's contact and location details by tapping on the vehicle's card. \n 9. You can check your booking by going to the "Profile" > "Booking History".\n</string>
    <string name="help2">Follow the steps to put your Vehicle on Rent: \n 1. Download and install the app. \n 2. Login/Register yourself. \n 3. Go to the "Profile" page. \n 4. Tap on "Put Vehicle on Rent". \n 5. Provide details of your vehicle with the image and tap on "Submit". \n 6. Your post will be verified by the CARRENT. \n 7. Once it is verified your vehicle will be posted on the app. \n 8. You can still check your vehicles by going to the "Profile" > "Listed Vehicles". \n</string>
    <string name="help3">We are always happy to have your questions and suggestions on info@carrent.com.</string>
    <string name="listed_vehicle">Listed Vehicle</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="name">Enter Name</string>
    <string name="contact">Enter contact Number</string>
    <string name="register">Register</string>
    <string name="city">Select a city</string>
    <string name="vehicle">Select a vehicle</string>
    <string name="vehicle_model">Enter Vehicle Model</string>
    <string name="vehicle_description">Enter Vehicle Description</string>
    <string name="vehicle_price">Enter Vehicle Price</string>
    <string name="vehicle_image">Select Image for Vehicle</string>
    <string name="submit">Submit</string>
    <string name="loading">Loading</string>
    <string name="from">From Date</string>
    <string name="to">To Date</string>
    <string name="search">Search</string>
    <string name="booking_history">Booking History</string>
    <string name="vehicle_rent">Put Vehicle on Rent</string>
    <string name="logout">Logout</string>
    <string name="number">9029895396</string>
</resources>
